@@ -12,6 +12,8 @@ Add chunks for empty description and percantage
 Display recipient region vocab and description
 Display capital spend
 Update country-budget-items
+Display conditions and legacy data
+Add crs-add
 
 
 Development Portal (2020-02-06 shi)
